// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Chatbot 預設輸出(不傳 variant,訪客首頁 Index.tsx 的用法) > AI 失敗時的輸出與加 prop 前一致 > AI 失敗 1`] = `
<div>
  <section
    class="py-16 bg-background"
  >
    <div
      class="container px-4 mx-auto"
    >
      <div
        class="max-w-4xl mx-auto"
      >
        <div
          class="text-center space-y-4 mb-8"
        >
          <h2
            class="text-4xl md:text-5xl font-bold"
          >
            食材需求對話
          </h2>
          <p
            class="text-xl text-muted-foreground"
          >
            告訴我們您的食材需求，我們將為您媒合最佳供應商
          </p>
        </div>
        <div
          class="rounded-lg border bg-card text-card-foreground shadow-sm overflow-hidden shadow-medium"
        >
          <div
            class="bg-primary/5 p-4 border-b border-border"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="w-10 h-10 rounded-full bg-primary/10 flex items-center justify-center"
              >
                <svg
                  class="lucide lucide-bot w-6 h-6 text-primary"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 8V4H8"
                  />
                  <rect
                    height="12"
                    rx="2"
                    width="16"
                    x="4"
                    y="8"
                  />
                  <path
                    d="M2 14h2"
                  />
                  <path
                    d="M20 14h2"
                  />
                  <path
                    d="M15 13v2"
                  />
                  <path
                    d="M9 13v2"
                  />
                </svg>
              </div>
              <div>
                <h3
                  class="font-semibold"
                >
                  食材需求對話
                </h3>
                <p
                  class="text-xs text-muted-foreground"
                >
                  線上
                </p>
              </div>
            </div>
          </div>
          <div
            class="h-[500px] overflow-y-auto p-4 space-y-4 bg-muted/10"
          >
            <div
              class="flex items-start space-x-2 "
            >
              <div
                class="w-8 h-8 rounded-full flex items-center justify-center flex-shrink-0 bg-primary/10"
              >
                <svg
                  class="lucide lucide-bot w-5 h-5 text-primary"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 8V4H8"
                  />
                  <rect
                    height="12"
                    rx="2"
                    width="16"
                    x="4"
                    y="8"
                  />
                  <path
                    d="M2 14h2"
                  />
                  <path
                    d="M20 14h2"
                  />
                  <path
                    d="M15 13v2"
                  />
                  <path
                    d="M9 13v2"
                  />
                </svg>
              </div>
              <div
                class="max-w-[70%] rounded-2xl px-4 py-2 bg-primary/10 text-foreground rounded-tl-none"
              >
                <p
                  class="text-sm whitespace-pre-line"
                >
                  您好！我是您的食材採購助手。請告訴我您需要什麼食材，我會幫您找到合適的供應商。
                </p>
                <p
                  class="text-xs opacity-60 mt-1"
                >
                  10:30
                </p>
              </div>
            </div>
            <div
              class="flex items-start space-x-2 flex-row-reverse space-x-reverse"
            >
              <div
                class="w-8 h-8 rounded-full flex items-center justify-center flex-shrink-0 bg-secondary/20"
              >
                <svg
                  class="lucide lucide-user w-5 h-5 text-secondary"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
                  />
                  <circle
                    cx="12"
                    cy="7"
                    r="4"
                  />
                </svg>
              </div>
              <div
                class="max-w-[70%] rounded-2xl px-4 py-2 bg-secondary text-secondary-foreground rounded-tr-none"
              >
                <p
                  class="text-sm whitespace-pre-line"
                >
                  你好
                </p>
                <p
                  class="text-xs opacity-60 mt-1"
                >
                  10:30
                </p>
              </div>
            </div>
            <div
              class="flex items-start space-x-2 "
            >
              <div
                class="w-8 h-8 rounded-full flex items-center justify-center flex-shrink-0 bg-primary/10"
              >
                <svg
                  class="lucide lucide-bot w-5 h-5 text-primary"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 8V4H8"
                  />
                  <rect
                    height="12"
                    rx="2"
                    width="16"
                    x="4"
                    y="8"
                  />
                  <path
                    d="M2 14h2"
                  />
                  <path
                    d="M20 14h2"
                  />
                  <path
                    d="M15 13v2"
                  />
                  <path
                    d="M9 13v2"
                  />
                </svg>
              </div>
              <div
                class="max-w-[70%] rounded-2xl px-4 py-2 bg-primary/10 text-foreground rounded-tl-none"
              >
                <p
                  class="text-sm whitespace-pre-line"
                >
                  抱歉,AI 服務暫時無法回覆,請稍後再試。(網路逾時)
                </p>
                <p
                  class="text-xs opacity-60 mt-1"
                >
                  10:30
                </p>
              </div>
            </div>
            <div />
          </div>
          <div
            class="p-4 border-t border-border bg-background"
          >
            <div
              class="flex space-x-2"
            >
              <input
                class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-base ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-foreground placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm flex-1"
                placeholder="例如：我需要新鮮番茄、生菜、雞胸肉..."
                value=""
              />
              <button
                class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 text-primary-foreground h-10 px-4 py-2 bg-primary hover:bg-primary/90"
                disabled=""
              >
                <svg
                  class="lucide lucide-send w-4 h-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M14.536 21.686a.5.5 0 0 0 .937-.024l6.5-19a.496.496 0 0 0-.635-.635l-19 6.5a.5.5 0 0 0-.024.937l7.93 3.18a2 2 0 0 1 1.112 1.11z"
                  />
                  <path
                    d="m21.854 2.147-10.94 10.939"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Chatbot 預設輸出(不傳 variant,訪客首頁 Index.tsx 的用法) > 初始 → 打字 → 等待回覆 → 收到回覆 → 送出需求,每一段輸出與加 prop 前一致 > 初始 1`] = `
<div>
  <section
    class="py-16 bg-background"
  >
    <div
      class="container px-4 mx-auto"
    >
      <div
        class="max-w-4xl mx-auto"
      >
        <div
          class="text-center space-y-4 mb-8"
        >
          <h2
            class="text-4xl md:text-5xl font-bold"
          >
            食材需求對話
          </h2>
          <p
            class="text-xl text-muted-foreground"
          >
            告訴我們您的食材需求，我們將為您媒合最佳供應商
          </p>
        </div>
        <div
          class="rounded-lg border bg-card text-card-foreground shadow-sm overflow-hidden shadow-medium"
        >
          <div
            class="bg-primary/5 p-4 border-b border-border"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="w-10 h-10 rounded-full bg-primary/10 flex items-center justify-center"
              >
                <svg
                  class="lucide lucide-bot w-6 h-6 text-primary"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 8V4H8"
                  />
                  <rect
                    height="12"
                    rx="2"
                    width="16"
                    x="4"
                    y="8"
                  />
                  <path
                    d="M2 14h2"
                  />
                  <path
                    d="M20 14h2"
                  />
                  <path
                    d="M15 13v2"
                  />
                  <path
                    d="M9 13v2"
                  />
                </svg>
              </div>
              <div>
                <h3
                  class="font-semibold"
                >
                  食材需求對話
                </h3>
                <p
                  class="text-xs text-muted-foreground"
                >
                  線上
                </p>
              </div>
            </div>
          </div>
          <div
            class="h-[500px] overflow-y-auto p-4 space-y-4 bg-muted/10"
          >
            <div
              class="flex items-start space-x-2 "
            >
              <div
                class="w-8 h-8 rounded-full flex items-center justify-center flex-shrink-0 bg-primary/10"
              >
                <svg
                  class="lucide lucide-bot w-5 h-5 text-primary"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 8V4H8"
                  />
                  <rect
                    height="12"
                    rx="2"
                    width="16"
                    x="4"
                    y="8"
                  />
                  <path
                    d="M2 14h2"
                  />
                  <path
                    d="M20 14h2"
                  />
                  <path
                    d="M15 13v2"
                  />
                  <path
                    d="M9 13v2"
                  />
                </svg>
              </div>
              <div
                class="max-w-[70%] rounded-2xl px-4 py-2 bg-primary/10 text-foreground rounded-tl-none"
              >
                <p
                  class="text-sm whitespace-pre-line"
                >
                  您好！我是您的食材採購助手。請告訴我您需要什麼食材，我會幫您找到合適的供應商。
                </p>
                <p
                  class="text-xs opacity-60 mt-1"
                >
                  10:30
                </p>
              </div>
            </div>
            <div />
          </div>
          <div
            class="p-4 border-t border-border bg-background"
          >
            <div
              class="flex space-x-2"
            >
              <input
                class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-base ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-foreground placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm flex-1"
                placeholder="例如：我需要新鮮番茄、生菜、雞胸肉..."
                value=""
              />
              <button
                class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 text-primary-foreground h-10 px-4 py-2 bg-primary hover:bg-primary/90"
                disabled=""
              >
                <svg
                  class="lucide lucide-send w-4 h-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M14.536 21.686a.5.5 0 0 0 .937-.024l6.5-19a.496.496 0 0 0-.635-.635l-19 6.5a.5.5 0 0 0-.024.937l7.93 3.18a2 2 0 0 1 1.112 1.11z"
                  />
                  <path
                    d="m21.854 2.147-10.94 10.939"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Chatbot 預設輸出(不傳 variant,訪客首頁 Index.tsx 的用法) > 初始 → 打字 → 等待回覆 → 收到回覆 → 送出需求,每一段輸出與加 prop 前一致 > 打字中 1`] = `
<div>
  <section
    class="py-16 bg-background"
  >
    <div
      class="container px-4 mx-auto"
    >
      <div
        class="max-w-4xl mx-auto"
      >
        <div
          class="text-center space-y-4 mb-8"
        >
          <h2
            class="text-4xl md:text-5xl font-bold"
          >
            食材需求對話
          </h2>
          <p
            class="text-xl text-muted-foreground"
          >
            告訴我們您的食材需求，我們將為您媒合最佳供應商
          </p>
        </div>
        <div
          class="rounded-lg border bg-card text-card-foreground shadow-sm overflow-hidden shadow-medium"
        >
          <div
            class="bg-primary/5 p-4 border-b border-border"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="w-10 h-10 rounded-full bg-primary/10 flex items-center justify-center"
              >
                <svg
                  class="lucide lucide-bot w-6 h-6 text-primary"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 8V4H8"
                  />
                  <rect
                    height="12"
                    rx="2"
                    width="16"
                    x="4"
                    y="8"
                  />
                  <path
                    d="M2 14h2"
                  />
                  <path
                    d="M20 14h2"
                  />
                  <path
                    d="M15 13v2"
                  />
                  <path
                    d="M9 13v2"
                  />
                </svg>
              </div>
              <div>
                <h3
                  class="font-semibold"
                >
                  食材需求對話
                </h3>
                <p
                  class="text-xs text-muted-foreground"
                >
                  線上
                </p>
              </div>
            </div>
          </div>
          <div
            class="h-[500px] overflow-y-auto p-4 space-y-4 bg-muted/10"
          >
            <div
              class="flex items-start space-x-2 "
            >
              <div
                class="w-8 h-8 rounded-full flex items-center justify-center flex-shrink-0 bg-primary/10"
              >
                <svg
                  class="lucide lucide-bot w-5 h-5 text-primary"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 8V4H8"
                  />
                  <rect
                    height="12"
                    rx="2"
                    width="16"
                    x="4"
                    y="8"
                  />
                  <path
                    d="M2 14h2"
                  />
                  <path
                    d="M20 14h2"
                  />
                  <path
                    d="M15 13v2"
                  />
                  <path
                    d="M9 13v2"
                  />
                </svg>
              </div>
              <div
                class="max-w-[70%] rounded-2xl px-4 py-2 bg-primary/10 text-foreground rounded-tl-none"
              >
                <p
                  class="text-sm whitespace-pre-line"
                >
                  您好！我是您的食材採購助手。請告訴我您需要什麼食材，我會幫您找到合適的供應商。
                </p>
                <p
                  class="text-xs opacity-60 mt-1"
                >
                  10:30
                </p>
              </div>
            </div>
            <div />
          </div>
          <div
            class="p-4 border-t border-border bg-background"
          >
            <div
              class="flex space-x-2"
            >
              <input
                class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-base ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-foreground placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm flex-1"
                placeholder="例如：我需要新鮮番茄、生菜、雞胸肉..."
                value="我是火鍋店,每週要進牛肉"
              />
              <button
                class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 text-primary-foreground h-10 px-4 py-2 bg-primary hover:bg-primary/90"
              >
                <svg
                  class="lucide lucide-send w-4 h-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M14.536 21.686a.5.5 0 0 0 .937-.024l6.5-19a.496.496 0 0 0-.635-.635l-19 6.5a.5.5 0 0 0-.024.937l7.93 3.18a2 2 0 0 1 1.112 1.11z"
                  />
                  <path
                    d="m21.854 2.147-10.94 10.939"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Chatbot 預設輸出(不傳 variant,訪客首頁 Index.tsx 的用法) > 初始 → 打字 → 等待回覆 → 收到回覆 → 送出需求,每一段輸出與加 prop 前一致 > 收到回覆 1`] = `
<div>
  <section
    class="py-16 bg-background"
  >
    <div
      class="container px-4 mx-auto"
    >
      <div
        class="max-w-4xl mx-auto"
      >
        <div
          class="text-center space-y-4 mb-8"
        >
          <h2
            class="text-4xl md:text-5xl font-bold"
          >
            食材需求對話
          </h2>
          <p
            class="text-xl text-muted-foreground"
          >
            告訴我們您的食材需求，我們將為您媒合最佳供應商
          </p>
        </div>
        <div
          class="rounded-lg border bg-card text-card-foreground shadow-sm overflow-hidden shadow-medium"
        >
          <div
            class="bg-primary/5 p-4 border-b border-border"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="w-10 h-10 rounded-full bg-primary/10 flex items-center justify-center"
              >
                <svg
                  class="lucide lucide-bot w-6 h-6 text-primary"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 8V4H8"
                  />
                  <rect
                    height="12"
                    rx="2"
                    width="16"
                    x="4"
                    y="8"
                  />
                  <path
                    d="M2 14h2"
                  />
                  <path
                    d="M20 14h2"
                  />
                  <path
                    d="M15 13v2"
                  />
                  <path
                    d="M9 13v2"
                  />
                </svg>
              </div>
              <div>
                <h3
                  class="font-semibold"
                >
                  食材需求對話
                </h3>
                <p
                  class="text-xs text-muted-foreground"
                >
                  線上
                </p>
              </div>
            </div>
          </div>
          <div
            class="h-[500px] overflow-y-auto p-4 space-y-4 bg-muted/10"
          >
            <div
              class="flex items-start space-x-2 "
            >
              <div
                class="w-8 h-8 rounded-full flex items-center justify-center flex-shrink-0 bg-primary/10"
              >
                <svg
                  class="lucide lucide-bot w-5 h-5 text-primary"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 8V4H8"
                  />
                  <rect
                    height="12"
                    rx="2"
                    width="16"
                    x="4"
                    y="8"
                  />
                  <path
                    d="M2 14h2"
                  />
                  <path
                    d="M20 14h2"
                  />
                  <path
                    d="M15 13v2"
                  />
                  <path
                    d="M9 13v2"
                  />
                </svg>
              </div>
              <div
                class="max-w-[70%] rounded-2xl px-4 py-2 bg-primary/10 text-foreground rounded-tl-none"
              >
                <p
                  class="text-sm whitespace-pre-line"
                >
                  您好！我是您的食材採購助手。請告訴我您需要什麼食材，我會幫您找到合適的供應商。
                </p>
                <p
                  class="text-xs opacity-60 mt-1"
                >
                  10:30
                </p>
              </div>
            </div>
            <div
              class="flex items-start space-x-2 flex-row-reverse space-x-reverse"
            >
              <div
                class="w-8 h-8 rounded-full flex items-center justify-center flex-shrink-0 bg-secondary/20"
              >
                <svg
                  class="lucide lucide-user w-5 h-5 text-secondary"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
                  />
                  <circle
                    cx="12"
                    cy="7"
                    r="4"
                  />
                </svg>
              </div>
              <div
                class="max-w-[70%] rounded-2xl px-4 py-2 bg-secondary text-secondary-foreground rounded-tr-none"
              >
                <p
                  class="text-sm whitespace-pre-line"
                >
                  我是火鍋店,每週要進牛肉
                </p>
                <p
                  class="text-xs opacity-60 mt-1"
                >
                  10:30
                </p>
              </div>
            </div>
            <div
              class="flex items-start space-x-2 "
            >
              <div
                class="w-8 h-8 rounded-full flex items-center justify-center flex-shrink-0 bg-primary/10"
              >
                <svg
                  class="lucide lucide-bot w-5 h-5 text-primary"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 8V4H8"
                  />
                  <rect
                    height="12"
                    rx="2"
                    width="16"
                    x="4"
                    y="8"
                  />
                  <path
                    d="M2 14h2"
                  />
                  <path
                    d="M20 14h2"
                  />
                  <path
                    d="M15 13v2"
                  />
                  <path
                    d="M9 13v2"
                  />
                </svg>
              </div>
              <div
                class="max-w-[70%] rounded-2xl px-4 py-2 bg-primary/10 text-foreground rounded-tl-none"
              >
                <p
                  class="text-sm whitespace-pre-line"
                >
                  好的!請問每週大約需要多少牛肉?
                </p>
                <p
                  class="text-xs opacity-60 mt-1"
                >
                  10:30
                </p>
              </div>
            </div>
            <div />
          </div>
          <div
            class="p-4 border-t border-border bg-background"
          >
            <div
              class="flex space-x-2"
            >
              <input
                class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-base ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-foreground placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm flex-1"
                placeholder="例如：我需要新鮮番茄、生菜、雞胸肉..."
                value=""
              />
              <button
                class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 text-primary-foreground h-10 px-4 py-2 bg-primary hover:bg-primary/90"
                disabled=""
              >
                <svg
                  class="lucide lucide-send w-4 h-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M14.536 21.686a.5.5 0 0 0 .937-.024l6.5-19a.496.496 0 0 0-.635-.635l-19 6.5a.5.5 0 0 0-.024.937l7.93 3.18a2 2 0 0 1 1.112 1.11z"
                  />
                  <path
                    d="m21.854 2.147-10.94 10.939"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Chatbot 預設輸出(不傳 variant,訪客首頁 Index.tsx 的用法) > 初始 → 打字 → 等待回覆 → 收到回覆 → 送出需求,每一段輸出與加 prop 前一致 > 等待回覆 1`] = `
<div>
  <section
    class="py-16 bg-background"
  >
    <div
      class="container px-4 mx-auto"
    >
      <div
        class="max-w-4xl mx-auto"
      >
        <div
          class="text-center space-y-4 mb-8"
        >
          <h2
            class="text-4xl md:text-5xl font-bold"
          >
            食材需求對話
          </h2>
          <p
            class="text-xl text-muted-foreground"
          >
            告訴我們您的食材需求，我們將為您媒合最佳供應商
          </p>
        </div>
        <div
          class="rounded-lg border bg-card text-card-foreground shadow-sm overflow-hidden shadow-medium"
        >
          <div
            class="bg-primary/5 p-4 border-b border-border"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="w-10 h-10 rounded-full bg-primary/10 flex items-center justify-center"
              >
                <svg
                  class="lucide lucide-bot w-6 h-6 text-primary"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 8V4H8"
                  />
                  <rect
                    height="12"
                    rx="2"
                    width="16"
                    x="4"
                    y="8"
                  />
                  <path
                    d="M2 14h2"
                  />
                  <path
                    d="M20 14h2"
                  />
                  <path
                    d="M15 13v2"
                  />
                  <path
                    d="M9 13v2"
                  />
                </svg>
              </div>
              <div>
                <h3
                  class="font-semibold"
                >
                  食材需求對話
                </h3>
                <p
                  class="text-xs text-muted-foreground"
                >
                  線上
                </p>
              </div>
            </div>
          </div>
          <div
            class="h-[500px] overflow-y-auto p-4 space-y-4 bg-muted/10"
          >
            <div
              class="flex items-start space-x-2 "
            >
              <div
                class="w-8 h-8 rounded-full flex items-center justify-center flex-shrink-0 bg-primary/10"
              >
                <svg
                  class="lucide lucide-bot w-5 h-5 text-primary"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 8V4H8"
                  />
                  <rect
                    height="12"
                    rx="2"
                    width="16"
                    x="4"
                    y="8"
                  />
                  <path
                    d="M2 14h2"
                  />
                  <path
                    d="M20 14h2"
                  />
                  <path
                    d="M15 13v2"
                  />
                  <path
                    d="M9 13v2"
                  />
                </svg>
              </div>
              <div
                class="max-w-[70%] rounded-2xl px-4 py-2 bg-primary/10 text-foreground rounded-tl-none"
              >
                <p
                  class="text-sm whitespace-pre-line"
                >
                  您好！我是您的食材採購助手。請告訴我您需要什麼食材，我會幫您找到合適的供應商。
                </p>
                <p
                  class="text-xs opacity-60 mt-1"
                >
                  10:30
                </p>
              </div>
            </div>
            <div
              class="flex items-start space-x-2 flex-row-reverse space-x-reverse"
            >
              <div
                class="w-8 h-8 rounded-full flex items-center justify-center flex-shrink-0 bg-secondary/20"
              >
                <svg
                  class="lucide lucide-user w-5 h-5 text-secondary"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
                  />
                  <circle
                    cx="12"
                    cy="7"
                    r="4"
                  />
                </svg>
              </div>
              <div
                class="max-w-[70%] rounded-2xl px-4 py-2 bg-secondary text-secondary-foreground rounded-tr-none"
              >
                <p
                  class="text-sm whitespace-pre-line"
                >
                  我是火鍋店,每週要進牛肉
                </p>
                <p
                  class="text-xs opacity-60 mt-1"
                >
                  10:30
                </p>
              </div>
            </div>
            <div
              class="flex items-start space-x-2"
            >
              <div
                class="w-8 h-8 rounded-full bg-primary/10 flex items-center justify-center"
              >
                <svg
                  class="lucide lucide-bot w-5 h-5 text-primary"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 8V4H8"
                  />
                  <rect
                    height="12"
                    rx="2"
                    width="16"
                    x="4"
                    y="8"
                  />
                  <path
                    d="M2 14h2"
                  />
                  <path
                    d="M20 14h2"
                  />
                  <path
                    d="M15 13v2"
                  />
                  <path
                    d="M9 13v2"
                  />
                </svg>
              </div>
              <div
                class="bg-primary/10 rounded-2xl rounded-tl-none px-4 py-3"
              >
                <div
                  class="flex space-x-1"
                >
                  <div
                    class="w-2 h-2 bg-primary/60 rounded-full animate-bounce"
                    style="animation-delay: 0ms;"
                  />
                  <div
                    class="w-2 h-2 bg-primary/60 rounded-full animate-bounce"
                    style="animation-delay: 150ms;"
                  />
                  <div
                    class="w-2 h-2 bg-primary/60 rounded-full animate-bounce"
                    style="animation-delay: 300ms;"
                  />
                </div>
              </div>
            </div>
            <div />
          </div>
          <div
            class="p-4 border-t border-border bg-background"
          >
            <div
              class="flex space-x-2"
            >
              <input
                class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-base ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-foreground placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm flex-1"
                placeholder="例如：我需要新鮮番茄、生菜、雞胸肉..."
                value=""
              />
              <button
                class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 text-primary-foreground h-10 px-4 py-2 bg-primary hover:bg-primary/90"
                disabled=""
              >
                <svg
                  class="lucide lucide-send w-4 h-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M14.536 21.686a.5.5 0 0 0 .937-.024l6.5-19a.496.496 0 0 0-.635-.635l-19 6.5a.5.5 0 0 0-.024.937l7.93 3.18a2 2 0 0 1 1.112 1.11z"
                  />
                  <path
                    d="m21.854 2.147-10.94 10.939"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Chatbot 預設輸出(不傳 variant,訪客首頁 Index.tsx 的用法) > 初始 → 打字 → 等待回覆 → 收到回覆 → 送出需求,每一段輸出與加 prop 前一致 > 送出需求後 1`] = `
<div>
  <section
    class="py-16 bg-background"
  >
    <div
      class="container px-4 mx-auto"
    >
      <div
        class="max-w-4xl mx-auto"
      >
        <div
          class="text-center space-y-4 mb-8"
        >
          <h2
            class="text-4xl md:text-5xl font-bold"
          >
            食材需求對話
          </h2>
          <p
            class="text-xl text-muted-foreground"
          >
            告訴我們您的食材需求，我們將為您媒合最佳供應商
          </p>
        </div>
        <div
          class="rounded-lg border bg-card text-card-foreground shadow-sm overflow-hidden shadow-medium"
        >
          <div
            class="bg-primary/5 p-4 border-b border-border"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="w-10 h-10 rounded-full bg-primary/10 flex items-center justify-center"
              >
                <svg
                  class="lucide lucide-bot w-6 h-6 text-primary"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 8V4H8"
                  />
                  <rect
                    height="12"
                    rx="2"
                    width="16"
                    x="4"
                    y="8"
                  />
                  <path
                    d="M2 14h2"
                  />
                  <path
                    d="M20 14h2"
                  />
                  <path
                    d="M15 13v2"
                  />
                  <path
                    d="M9 13v2"
                  />
                </svg>
              </div>
              <div>
                <h3
                  class="font-semibold"
                >
                  食材需求對話
                </h3>
                <p
                  class="text-xs text-muted-foreground"
                >
                  線上
                </p>
              </div>
            </div>
          </div>
          <div
            class="h-[500px] overflow-y-auto p-4 space-y-4 bg-muted/10"
          >
            <div
              class="flex items-start space-x-2 "
            >
              <div
                class="w-8 h-8 rounded-full flex items-center justify-center flex-shrink-0 bg-primary/10"
              >
                <svg
                  class="lucide lucide-bot w-5 h-5 text-primary"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 8V4H8"
                  />
                  <rect
                    height="12"
                    rx="2"
                    width="16"
                    x="4"
                    y="8"
                  />
                  <path
                    d="M2 14h2"
                  />
                  <path
                    d="M20 14h2"
                  />
                  <path
                    d="M15 13v2"
                  />
                  <path
                    d="M9 13v2"
                  />
                </svg>
              </div>
              <div
                class="max-w-[70%] rounded-2xl px-4 py-2 bg-primary/10 text-foreground rounded-tl-none"
              >
                <p
                  class="text-sm whitespace-pre-line"
                >
                  您好！我是您的食材採購助手。請告訴我您需要什麼食材，我會幫您找到合適的供應商。
                </p>
                <p
                  class="text-xs opacity-60 mt-1"
                >
                  10:30
                </p>
              </div>
            </div>
            <div
              class="flex items-start space-x-2 flex-row-reverse space-x-reverse"
            >
              <div
                class="w-8 h-8 rounded-full flex items-center justify-center flex-shrink-0 bg-secondary/20"
              >
                <svg
                  class="lucide lucide-user w-5 h-5 text-secondary"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
                  />
                  <circle
                    cx="12"
                    cy="7"
                    r="4"
                  />
                </svg>
              </div>
              <div
                class="max-w-[70%] rounded-2xl px-4 py-2 bg-secondary text-secondary-foreground rounded-tr-none"
              >
                <p
                  class="text-sm whitespace-pre-line"
                >
                  我是火鍋店,每週要進牛肉
                </p>
                <p
                  class="text-xs opacity-60 mt-1"
                >
                  10:30
                </p>
              </div>
            </div>
            <div
              class="flex items-start space-x-2 "
            >
              <div
                class="w-8 h-8 rounded-full flex items-center justify-center flex-shrink-0 bg-primary/10"
              >
                <svg
                  class="lucide lucide-bot w-5 h-5 text-primary"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 8V4H8"
                  />
                  <rect
                    height="12"
                    rx="2"
                    width="16"
                    x="4"
                    y="8"
                  />
                  <path
                    d="M2 14h2"
                  />
                  <path
                    d="M20 14h2"
                  />
                  <path
                    d="M15 13v2"
                  />
                  <path
                    d="M9 13v2"
                  />
                </svg>
              </div>
              <div
                class="max-w-[70%] rounded-2xl px-4 py-2 bg-primary/10 text-foreground rounded-tl-none"
              >
                <p
                  class="text-sm whitespace-pre-line"
                >
                  好的!請問每週大約需要多少牛肉?
                </p>
                <p
                  class="text-xs opacity-60 mt-1"
                >
                  10:30
                </p>
              </div>
            </div>
            <div
              class="flex items-start space-x-2 flex-row-reverse space-x-reverse"
            >
              <div
                class="w-8 h-8 rounded-full flex items-center justify-center flex-shrink-0 bg-secondary/20"
              >
                <svg
                  class="lucide lucide-user w-5 h-5 text-secondary"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
                  />
                  <circle
                    cx="12"
                    cy="7"
                    r="4"
                  />
                </svg>
              </div>
              <div
                class="max-w-[70%] rounded-2xl px-4 py-2 bg-secondary text-secondary-foreground rounded-tr-none"
              >
                <p
                  class="text-sm whitespace-pre-line"
                >
                  牛肉 5kg、洋蔥 3kg、青蔥,幫我找供應商
                </p>
                <p
                  class="text-xs opacity-60 mt-1"
                >
                  10:30
                </p>
              </div>
            </div>
            <div
              class="flex items-start space-x-2 "
            >
              <div
                class="w-8 h-8 rounded-full flex items-center justify-center flex-shrink-0 bg-primary/10"
              >
                <svg
                  class="lucide lucide-bot w-5 h-5 text-primary"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 8V4H8"
                  />
                  <rect
                    height="12"
                    rx="2"
                    width="16"
                    x="4"
                    y="8"
                  />
                  <path
                    d="M2 14h2"
                  />
                  <path
                    d="M20 14h2"
                  />
                  <path
                    d="M15 13v2"
                  />
                  <path
                    d="M9 13v2"
                  />
                </svg>
              </div>
              <div
                class="max-w-[70%] rounded-2xl px-4 py-2 bg-primary/10 text-foreground rounded-tl-none"
              >
                <p
                  class="text-sm whitespace-pre-line"
                >
                  了解,我來幫您整理。
                </p>
                <p
                  class="text-xs opacity-60 mt-1"
                >
                  10:30
                </p>
              </div>
            </div>
            <div
              class="flex items-start space-x-2 "
            >
              <div
                class="w-8 h-8 rounded-full flex items-center justify-center flex-shrink-0 bg-primary/10"
              >
                <svg
                  class="lucide lucide-bot w-5 h-5 text-primary"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 8V4H8"
                  />
                  <rect
                    height="12"
                    rx="2"
                    width="16"
                    x="4"
                    y="8"
                  />
                  <path
                    d="M2 14h2"
                  />
                  <path
                    d="M20 14h2"
                  />
                  <path
                    d="M15 13v2"
                  />
                  <path
                    d="M9 13v2"
                  />
                </svg>
              </div>
              <div
                class="max-w-[70%] rounded-2xl px-4 py-2 bg-primary/10 text-foreground rounded-tl-none"
              >
                <p
                  class="text-sm whitespace-pre-line"
                >
                  已為您整理出採購需求:
牛肉 5kg
洋蔥 3kg
青蔥

正在為您媒合供應商…
                </p>
                <p
                  class="text-xs opacity-60 mt-1"
                >
                  10:30
                </p>
              </div>
            </div>
            <div />
          </div>
          <div
            class="p-4 border-t border-border bg-background"
          >
            <div
              class="flex space-x-2"
            >
              <input
                class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-base ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-foreground placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm flex-1"
                placeholder="例如：我需要新鮮番茄、生菜、雞胸肉..."
                value=""
              />
              <button
                class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 text-primary-foreground h-10 px-4 py-2 bg-primary hover:bg-primary/90"
                disabled=""
              >
                <svg
                  class="lucide lucide-send w-4 h-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M14.536 21.686a.5.5 0 0 0 .937-.024l6.5-19a.496.496 0 0 0-.635-.635l-19 6.5a.5.5 0 0 0-.024.937l7.93 3.18a2 2 0 0 1 1.112 1.11z"
                  />
                  <path
                    d="m21.854 2.147-10.94 10.939"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;
